<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="iron_title">Dog-House</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="default_string">Default</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">Notification</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="navigation_and_recents_category">Navigation</string>
    <string name="build_tweaks_summary_title">The Right Customisations!</string>
    <string name="listview">ListView</string>
    <string name="buttons_title">Buttons</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="misc_iron_title">Misc Iron</string>
    <string name="monet_title">Monet Settings</string>
    <string name="monet_category">Monet</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="general_category">General</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="theme_title">Themes</string>
    <string name="notification_light_settings">Notifications light</string>
    <string name="unit_seconds">seconds</string>
    <string name="iron_dialog_title">Help us help you!</string>
    <string name="iron_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="iron_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_advanced">Advanced reboot options</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="powermenu_emergency">Emergency</string>
    <string name="system_navigation_summary">Configure navigation menus</string>
    <string name="aosp_gesture_preference">AOSP Gestures</string>
    <string name="aosp_gesture_summary">Stock gestures included with AOSP</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Music control</string>
    <string name="volume_rocker_music_controls_summary">Long press volume buttons to switch tracks while screen off</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_volume_keys_title">Volume rocker</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="lockscreen_power_menu_disabled_title">Disable power menu on lock screen</string>
    <string name="lockscreen_power_menu_disabled_summary">This will only disable the power menu on secure lock screens</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="statusbar_clock_style_title">Clock &amp; date position</string>
    <string name="statusbar_clock_style_right">Right</string>
    <string name="statusbar_clock_style_centre">Centre</string>
    <string name="statusbar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="traffic_title">Traffic Indicators</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="battery_bar_title">Battery bar</string>
</resources>