<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
            android:key="traffic"
            android:fragment="org.boxer.iron.fragments.Traffic"
            android:title="@string/traffic_title" />

    <org.iron.support.preference.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

    <org.iron.support.preference.SystemSettingSwitchPreference
             android:key="roaming_indicator_icon"
             android:title="@string/roaming_indicator_icon_title"
             android:summary="@string/roaming_indicator_icon_summary"
             android:defaultValue="true"/>

    <Preference
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
    </Preference>

    <Preference
        android:key="status_bar_clock"
        android:fragment="org.boxer.iron.fragments.ClockDateSettings"
        android:title="@string/status_bar_clock_title" />

    <Preference
        android:key="misc_iron"
        android:fragment="org.boxer.iron.fragments.MiscIron"
        android:title="@string/misc_iron_title" />

    <Preference
        android:key="battery_bar_category"
        android:fragment="org.boxer.iron.fragments.BatteryBar"
        android:title="@string/battery_bar_title" />

</PreferenceScreen>
