<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

     <Preference
        android:key="general_tweaks"
        android:fragment="org.boxer.iron.fragments.GeneralTweaks"
        android:title="@string/general_tweaks_title" />

    <Preference
        android:key="themes"
        android:fragment="org.boxer.iron.fragments.Themes"
        android:title="@string/theme_title" />

    <Preference
        android:key="gesture_settings"
        android:title="@string/aosp_gesture_preference"
        android:summary="@string/aosp_gesture_summary"
        android:fragment="com.android.settings.gestures.GestureSettings"
        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>

    <Preference
        android:key="buttons"
        android:fragment="org.boxer.iron.fragments.Buttons"
        android:title="@string/buttons_title" />

</PreferenceScreen>
